# quickshot

./: .gitignore  README.md
SVMTraining/: .gitignore  BuildDictionary.cpp  CMakeLists.txt  all-images.txt  dictionary.yml  list2.txt  test_images.txt  train_images.txt  vocabulary.yml
SVMTraining/classifiers/: baiterek.xml  congresshall.xml  defence.xml  hanshatyr.xml  keruyen.xml  pyramid.xml  shabyt.xml  triumf.xml  vokzal.xml
android/: AndroidManifest.xml  project.properties
android/assets/: bayterek.xml  congresshall.xml  data.xml  keruyen.xml  nuniversity.xml  shatyr.xml  triumf.xml  vocabulary.yml  vokzal.xml
android/old_files/: CopyOfMainActivity.java  GetImageHashMapTask.java  MainActivity.java  ObjectRecognizer.java  PlacesService.java
android/res/anim/: flipin_left.xml  flipin_right.xml  flipout_left.xml  flipout_right.xml
android/res/layout/: activity_main.xml  activity_start.xml
android/res/menu/: main.xml  start.xml
android/res/raw/: hanshatyr.xml  nu.xml  pyramid.xml
android/res/values/: data.xml  strings.xml
android/src/kz/edu/nu/sst/quickshot/: GetImageHashMapTask.java  MainActivity.java  ObjectRecognitionTask.java  ObjectRecognizer.java  OpenCVInit.java  OpenCVTool.java  Photo.java  Place.java  PlaceCV.java  PlaceList.java  PlacesService.java  StartActivity.java
