cmake_minimum_required(VERSION 2.8)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
project( BuildDictionary )
find_package( OpenCV REQUIRED )
add_executable( BuildDictionary BuildDictionary.cpp )
target_link_libraries( BuildDictionary ${OpenCV_LIBS} )
